finished simple note logic